--- a/ADIN.Device/ADIN.Device.csproj
+++ b/ADIN.Device/ADIN.Device.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Models\AbstractADINFactory.cs" />
     <Compile Include="Services\ADIN1110FirmwareAPI.cs" />
     <Compile Include="Services\ADIN2111FirmwareAPI.cs" />
+    <Compile Include="Services\IADIN2111API.cs" />
     <Compile Include="Services\ITimeDomainReflectometryAPI.cs" />
     <Compile Include="Models\LoopbackModel.cs" />
     <Compile Include="Models\RegisterAccessModel.cs" />
