--- a/ADIN.WPF/Properties/Settings.settings
+++ b/ADIN.WPF/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="MultiChipSupport" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ActiveLinkMon" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
