Added cable diag for 1300/1200 Switching cable diag between boards supported PhyState StandBy foreground adjusted disabling/enbling button condition fixed

--- a/ADIN.WPF/ADIN.WPF.csproj
+++ b/ADIN.WPF/ADIN.WPF.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Commands\CableDiag\TDRManualCommand.cs" />
     <Compile Include="Commands\CableDiag\TDRSaveCommand.cs" />
     <Compile Include="Commands\ClearLogCommand.cs" />
+    <Compile Include="Commands\DiagnoseCommand.cs" />
     <Compile Include="Commands\RemoteLoopbackCommand.cs" />
     <Compile Include="Commands\CommandBase.cs" />
     <Compile Include="Commands\DisableLinkCommand.cs" />
@@ -251,6 +252,7 @@
     <Compile Include="ViewModel\OperationViewModel.cs" />
     <Compile Include="ViewModel\RegisterAccessViewModel.cs" />
     <Compile Include="ViewModel\RegisterListingViewModel.cs" />
+    <Compile Include="ViewModel\RunCableDiagViewModel.cs" />
     <Compile Include="ViewModel\StatusStripViewModel.cs" />
     <Compile Include="ViewModel\TestModeViewModel.cs" />
     <Compile Include="ViewModel\TimeDomainReflectometryViewModel.cs" />
@@ -275,6 +277,9 @@
     </Compile>
     <Compile Include="View\LoopbackView.xaml.cs">
       <DependentUpon>LoopbackView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\RunCableDiagView.xaml.cs">
+      <DependentUpon>RunCableDiagView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\StatusStripView.xaml.cs">
       <DependentUpon>StatusStripView.xaml</DependentUpon>
@@ -420,6 +425,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="View\LoopbackView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\RunCableDiagView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
