Active Link disabled T1L features such as Link Prop, Test Modes, Loopback, FrameGenChecker enabled

--- a/ADIN.WPF/App.config
+++ b/ADIN.WPF/App.config
@@ -21,7 +21,7 @@
     <userSettings>
         <ADIN.WPF.Properties.Settings>
             <setting name="ActiveLinkMon" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
         </ADIN.WPF.Properties.Settings>
     </userSettings>
