--- a/Helper/Helper.csproj
+++ b/Helper/Helper.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Feedback\FeedbackModel.cs" />
     <Compile Include="Feedback\FeedbackType.cs" />
     <Compile Include="FileToLoad\XmlFileLoader.cs" />
+    <Compile Include="MSE\MseSnr.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadAccessValidate\RegisterAccessValidate.cs" />
     <Compile Include="ReadFile\ReadContent.cs" />
