NoUIDisplay_NoDevice: - saving this if needed as template in future - changed IsAdin1100Board to IsT1LBoard - added IsGigabitBoard and IsToShowNoUI - added defines for disabling boards based on Gigabit/T1L version

--- a/ADIN.WPF/App.config
+++ b/ADIN.WPF/App.config
@@ -14,7 +14,7 @@
     <applicationSettings>
         <ADIN.WPF.Properties.Settings>
             <setting name="MultiChipSupport" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
         </ADIN.WPF.Properties.Settings>
     </applicationSettings>
