--- a/ADIN.WPF/App.config
+++ b/ADIN.WPF/App.config
@@ -14,7 +14,7 @@
     <applicationSettings>
         <ADIN.WPF.Properties.Settings>
             <setting name="MultiChipSupport" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
         </ADIN.WPF.Properties.Settings>
     </applicationSettings>
