Slicer Errror Command added

--- a/ADIN.WPF/ADIN.WPF.csproj
+++ b/ADIN.WPF/ADIN.WPF.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Commands\RegisterActionCommand.cs" />
     <Compile Include="Commands\ResetCommand.cs" />
     <Compile Include="Commands\ResetFrameDeviceCheckerCommnad.cs" />
+    <Compile Include="Commands\ResetSlicerErrorCommand.cs" />
     <Compile Include="Commands\ScriptApplyCommand.cs" />
     <Compile Include="Commands\SoftwarePowerDownCommand.cs" />
     <Compile Include="Commands\TestModeCommand.cs" />
