--- a/ADIN.WPF/ADIN.WPF.csproj
+++ b/ADIN.WPF/ADIN.WPF.csproj
@@ -84,7 +84,7 @@
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>default</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>true</Prefer32Bit>
     <CodeAnalysisRuleSet>ADIN.WPF.ruleset</CodeAnalysisRuleSet>
