--- a/Helper/Helper.csproj
+++ b/Helper/Helper.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Feedback\FeedbackModel.cs" />
     <Compile Include="Feedback\FeedbackType.cs" />
     <Compile Include="FileToLoad\XmlFileLoader.cs" />
+    <Compile Include="ForegroundColor\ForegroundColorStyle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadAccessValidate\RegisterAccessValidate.cs" />
     <Compile Include="ReadFile\ReadContent.cs" />
@@ -92,6 +93,7 @@
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
