--- a/ADIN.Device/ADIN.Device.csproj
+++ b/ADIN.Device/ADIN.Device.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Models\MseModel.cs" />
     <Compile Include="Services\ADIN1110FirmwareAPI.cs" />
     <Compile Include="Services\ADIN2111FirmwareAPI.cs" />
+    <Compile Include="Services\ADINFirmwareAPI.cs" />
     <Compile Include="Services\IADIN2111API.cs" />
     <Compile Include="Services\ICableDiagAPI.cs" />
     <Compile Include="Services\ITimeDomainReflectometryAPI.cs" />
