ADIN1320_Loopback - fixed loopbackADIN1320 - added loopback images for adin1320 to the solution - fixed loopback viewmodel

--- a/ADIN.WPF/ADIN.WPF.csproj
+++ b/ADIN.WPF/ADIN.WPF.csproj
@@ -641,6 +641,15 @@
       <AlwaysRun>True</AlwaysRun>
       <RunCustomToolOnBuild>True</RunCustomToolOnBuild>
     </Content>
+    <Resource Include="Images\loopback\Lb_ADIN1320_AllDigital.png" />
+    <Resource Include="Images\loopback\Lb_ADIN1320_ExtCable.png" />
+    <Resource Include="Images\loopback\Lb_ADIN1320_LineDriver.png" />
+    <Resource Include="Images\loopback\Lb_ADIN1320_LineInterface.png" />
+    <Resource Include="Images\loopback\Lb_ADIN1320_MII.png" />
+    <Resource Include="Images\loopback\Lb_ADIN1320_None.png" />
+    <Resource Include="Images\loopback\Lb_ADIN1320_Remote.png" />
+    <Resource Include="Images\loopback\Lb_ADIN1320_SerDes.png" />
+    <Resource Include="Images\loopback\Lb_ADIN1320_SerDesDigital.png" />
     <Resource Include="Images\loopback\Loopback_AllDigital.png" />
     <Resource Include="Images\loopback\Loopback_ExtCable.png" />
     <Resource Include="Images\loopback\Loopback_LineDriver.png" />
