ADIN1320_Implementation - added interface for adin1320 - added firmware API for adin1320 - added adin1320Model which only includes fwAPI and loopback - added temporary "EVAL-ADIN1320" as one of the boards for testing placeholder adin1320 - added adin1320 loopback buttons with visibility only for adin1320 - adjusted width of loopback images to use width of UI (maxed out at image original size)

--- a/ADIN.Device/ADIN.Device.csproj
+++ b/ADIN.Device/ADIN.Device.csproj
@@ -106,6 +106,8 @@
     <Compile Include="Models\ADIN1300\FrameGenCheckerADIN1300.cs" />
     <Compile Include="Models\ADIN1300\LoopbackADIN1300.cs" />
     <Compile Include="Models\ADIN1300\TestModeADIN1300.cs" />
+    <Compile Include="Models\ADIN1320Model.cs" />
+    <Compile Include="Models\ADIN1320\LoopbackADIN1320.cs" />
     <Compile Include="Models\ADIN2111Model.cs" />
     <Compile Include="Models\IClockPinControl.cs" />
     <Compile Include="Models\IDeviceStatus.cs" />
@@ -123,7 +125,9 @@
     <Compile Include="Models\AbstractADINFactory.cs" />
     <Compile Include="Models\MseModel.cs" />
     <Compile Include="Services\ADIN1110FirmwareAPI.cs" />
+    <Compile Include="Services\ADIN1320FirmwareAPI.cs" />
     <Compile Include="Services\ADIN2111FirmwareAPI.cs" />
+    <Compile Include="Services\IADIN1320API.cs" />
     <Compile Include="Services\IADIN2111API.cs" />
     <Compile Include="Services\ICableDiagAPI.cs" />
     <Compile Include="Services\ITimeDomainReflectometryAPI.cs" />
