ADIN1320_Loopback - added ImagePath_RxSuppresion and TxSuppression - set image path for Rx/Tx suppression for adin1320 - renamed loopback images for adin1320 and relocated to a separate folder - added image for Tx and Rx suppression to loopback view above the loopback image

--- a/ADIN.WPF/ADIN.WPF.csproj
+++ b/ADIN.WPF/ADIN.WPF.csproj
@@ -641,15 +641,18 @@
       <AlwaysRun>True</AlwaysRun>
       <RunCustomToolOnBuild>True</RunCustomToolOnBuild>
     </Content>
-    <Resource Include="Images\loopback\Lb_ADIN1320_AllDigital.png" />
-    <Resource Include="Images\loopback\Lb_ADIN1320_ExtCable.png" />
-    <Resource Include="Images\loopback\Lb_ADIN1320_LineDriver.png" />
-    <Resource Include="Images\loopback\Lb_ADIN1320_LineInterface.png" />
-    <Resource Include="Images\loopback\Lb_ADIN1320_MII.png" />
-    <Resource Include="Images\loopback\Lb_ADIN1320_None.png" />
-    <Resource Include="Images\loopback\Lb_ADIN1320_Remote.png" />
-    <Resource Include="Images\loopback\Lb_ADIN1320_SerDes.png" />
-    <Resource Include="Images\loopback\Lb_ADIN1320_SerDesDigital.png" />
+    <Resource Include="Images\loopback_ADIN1320\ADIN1320_LbSerDesDigital.png" />
+    <Resource Include="Images\loopback_ADIN1320\ADIN1320_LbAllDigital.png" />
+    <Resource Include="Images\loopback_ADIN1320\ADIN1320_LbDigital.png" />
+    <Resource Include="Images\loopback_ADIN1320\ADIN1320_LbExtCable.png" />
+    <Resource Include="Images\loopback_ADIN1320\ADIN1320_LbLineDriver.png" />
+    <Resource Include="Images\loopback_ADIN1320\ADIN1320_LbLineInterface.png" />
+    <Resource Include="Images\loopback_ADIN1320\ADIN1320_LbMII.png" />
+    <Resource Include="Images\loopback_ADIN1320\ADIN1320_LbNone.png" />
+    <Resource Include="Images\loopback_ADIN1320\ADIN1320_LbRemote.png" />
+    <Resource Include="Images\loopback_ADIN1320\ADIN1320_LbRx.png" />
+    <Resource Include="Images\loopback_ADIN1320\ADIN1320_LbSerDes.png" />
+    <Resource Include="Images\loopback_ADIN1320\ADIN1320_LbTx.png" />
     <Resource Include="Images\loopback\Loopback_AllDigital.png" />
     <Resource Include="Images\loopback\Loopback_ExtCable.png" />
     <Resource Include="Images\loopback\Loopback_LineDriver.png" />
