--- a/ADIN.Device/ADIN.Device.csproj
+++ b/ADIN.Device/ADIN.Device.csproj
@@ -72,18 +72,21 @@
       <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="SciChart.Charting, Version=5.4.0.12119, Culture=neutral, PublicKeyToken=b55dd9efe817e823, processorArchitecture=MSIL">
       <HintPath>..\SciChartLibraries\SciChart.Charting.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\ADIN1110Model.cs" />
@@ -107,6 +110,7 @@
     <Compile Include="Models\ADIN1300\LoopbackADIN1300.cs" />
     <Compile Include="Models\ADIN1300\TestModeADIN1300.cs" />
     <Compile Include="Models\ADIN1320Model.cs" />
+    <Compile Include="Models\ADIN1320\DeviceStatusADIN1320.cs" />
     <Compile Include="Models\ADIN1320\FrameGenCheckerADIN1320.cs" />
     <Compile Include="Models\ADIN1320\LoopbackADIN1320.cs" />
     <Compile Include="Models\ADIN2111Model.cs" />
@@ -161,6 +165,9 @@
     <Compile Include="Services\IMDIOAPI.cs" />
     <Compile Include="Services\ITxLevelAPI.cs" />
     <Compile Include="Services\ScriptService.cs" />
+    <Compile Include="TestView\TestViewAtOtherProject.xaml.cs">
+      <DependentUpon>TestViewAtOtherProject.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ADI.Register\ADI.Register.csproj">
@@ -196,6 +203,12 @@
   <ItemGroup>
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="TestView\TestViewAtOtherProject.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
