ADIN1320_LoopbackFrameGen - added loopbackframegen model, view and viewmodel - added device status for loopbackframegen - relocated onpropertychange for masterslave - added ADIN1320Model to temporarily use ADIN1300FirmwareAPI - updated adin1300model to accept phyaddress - added adin1320 to acceptable devices and board type - added styles at textblockstyle and whitetheme - added loopbackframegen tab to operationsview - updated operations view and viewmodel to set specific tabs for each boards - temporarily modified executeframechecker and resetframechecker commands for sample

--- a/ADIN.Device/ADIN.Device.csproj
+++ b/ADIN.Device/ADIN.Device.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Models\FrameGenCheckerModel.cs" />
     <Compile Include="Models\IADINDevice.cs" />
     <Compile Include="Models\AbstractADINFactory.cs" />
+    <Compile Include="Models\LoopbackFrameGenCheckerModel.cs" />
     <Compile Include="Models\MseModel.cs" />
     <Compile Include="Services\ADIN1110FirmwareAPI.cs" />
     <Compile Include="Services\ADIN1320FirmwareAPI.cs" />
