ADIN1320_LoopbackFrameGen - added linkproperties for adin1320 - added UpdateFrameGenSettings to update framegen values upon changing CuPhy/SerDes - temporarily adding function for updateframegensettings at adin1300 firmware API

--- a/ADIN.Device/ADIN.Device.csproj
+++ b/ADIN.Device/ADIN.Device.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Models\ADIN1300\TestModeADIN1300.cs" />
     <Compile Include="Models\ADIN1320Model.cs" />
     <Compile Include="Models\ADIN1320\FrameGenCheckerADIN1320.cs" />
+    <Compile Include="Models\ADIN1320\LinkPropertiesADIN1320.cs" />
     <Compile Include="Models\ADIN1320\LoopbackADIN1320.cs" />
     <Compile Include="Models\ADIN2111Model.cs" />
     <Compile Include="Models\IClockPinControl.cs" />
