Avalonia_Implementation - implemented base view and viewmodels and structure for avalonia implementation - includes link properties and loopbackframegen views

--- a/Avalonia/ADIN.Avalonia/ADIN.Avalonia.csproj
+++ b/Avalonia/ADIN.Avalonia/ADIN.Avalonia.csproj
@@ -23,4 +23,16 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.0" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\DeviceListingView.axaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\ExtraCommandsView.axaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\LogActivityView.axaml" />
+  </ItemGroup>
 </Project>
