--- a/Avalonia/Helper/Helper.csproj
+++ b/Avalonia/Helper/Helper.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Avalonia" Version="11.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ADIN.Register\ADIN.Register.csproj" />
   </ItemGroup>
 
