--- a/Avalonia/ADIN.Device/ADIN.Device.csproj
+++ b/Avalonia/ADIN.Device/ADIN.Device.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Avalonia" Version="11.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ADIN.Register\ADIN.Register.csproj" />
     <ProjectReference Include="..\FTDIChip.Driver\FTDIChip.Driver.csproj" />
     <ProjectReference Include="..\Helper\Helper.csproj" />
