--- a/Avalonia/ADIN.Avalonia/ADIN.Avalonia.csproj
+++ b/Avalonia/ADIN.Avalonia/ADIN.Avalonia.csproj
@@ -24,6 +24,8 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.4" />
     <PackageReference Include="FTD2XX.Net" Version="1.2.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Management" Version="8.0.0" />
   </ItemGroup>
@@ -33,5 +35,11 @@
     <ProjectReference Include="..\ADIN.Register\ADIN.Register.csproj" />
     <ProjectReference Include="..\FTDIChip.Driver\FTDIChip.Driver.csproj" />
     <ProjectReference Include="..\Helper\Helper.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appConfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
