--- a/02_Avalonia/ADIN.Avalonia/ADIN.Avalonia.csproj
+++ b/02_Avalonia/ADIN.Avalonia/ADIN.Avalonia.csproj
@@ -38,6 +38,21 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="SciChart.Charting">
+      <HintPath>..\SciChartLibraries\SciChart.Charting.dll</HintPath>
+    </Reference>
+    <Reference Include="SciChart.Core">
+      <HintPath>..\SciChartLibraries\SciChart.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="SciChart.Data">
+      <HintPath>..\SciChartLibraries\SciChart.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="SciChart.Drawing">
+      <HintPath>..\SciChartLibraries\SciChart.Drawing.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appConfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
