Avalonia_Implementation - added IsHitTestVisible based on AllowInput to all controls in linkpropertiesview - applied arrangement of onpropertychanges to MDIX (to apply this as well to other segmented button options) - changed file path for scichart dlls

--- a/02_Avalonia/ADIN.Avalonia/ADIN.Avalonia.csproj
+++ b/02_Avalonia/ADIN.Avalonia/ADIN.Avalonia.csproj
@@ -39,16 +39,16 @@
 
   <ItemGroup>
     <Reference Include="SciChart.Charting">
-      <HintPath>..\SciChartLibraries\SciChart.Charting.dll</HintPath>
+      <HintPath>..\..\..\ADIN_V3_BlackDuckScan\02_Avalonia\SciChartLibraries\SciChart.Charting.dll</HintPath>
     </Reference>
     <Reference Include="SciChart.Core">
-      <HintPath>..\SciChartLibraries\SciChart.Core.dll</HintPath>
+      <HintPath>..\..\..\ADIN_V3_BlackDuckScan\02_Avalonia\SciChartLibraries\SciChart.Core.dll</HintPath>
     </Reference>
     <Reference Include="SciChart.Data">
-      <HintPath>..\SciChartLibraries\SciChart.Data.dll</HintPath>
+      <HintPath>..\..\..\ADIN_V3_BlackDuckScan\02_Avalonia\SciChartLibraries\SciChart.Data.dll</HintPath>
     </Reference>
     <Reference Include="SciChart.Drawing">
-      <HintPath>..\SciChartLibraries\SciChart.Drawing.dll</HintPath>
+      <HintPath>..\..\..\ADIN_V3_BlackDuckScan\02_Avalonia\SciChartLibraries\SciChart.Drawing.dll</HintPath>
     </Reference>
   </ItemGroup>
 
